Update eindwerk 1ste pagina.html

--- a/eindwerk 1ste pagina.html
+++ b/eindwerk 1ste pagina.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <div class="w3-bar w3-black">
-        <a href="file://https://benjamin1306.github.io/Eindwerk%20home%20pagina.html" class="w3-bar-item w3-button">Home</a>
+        <a href="https://benjamin1306.github.io/Eindwerk%20home%20pagina.html" class="w3-bar-item w3-button">Home</a>
         <a href="file:///C:/Users/devuy/OneDrive/Documenten/INFORMATICA/EINDWERK%20BESTANDEN/eindwerk%201ste%20pagina.html" class="w3-bar-item w3-button">basistricks en hun ontdekker</a>
         <a href="file:///C:/Users/devuy/OneDrive/Documenten/INFORMATICA/EINDWERK%20BESTANDEN/eindwerk%20pagina%20stances.html" class="w3-bar-item w3-button">standen</a>
         <a href="file:///C:/Users/devuy/OneDrive/Documenten/INFORMATICA/EINDWERK%20BESTANDEN/skateparken.html" class="w3-bar-item w3-button">skateparken</a>
