--- a/eindwerk 1ste pagina.html
+++ b/eindwerk 1ste pagina.html
@@ -13,7 +13,10 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <div class="w3-bar w3-black">
         <a href="https://benjamin1306.github.io/" class="w3-bar-item w3-button">Home</a>
-        <a href="benjamin1306.github.io/eindwerk 1ste pagina.html" class="w3-bar-item w3-button">basistricks en hun ontdekker</a>
+        <a href="benjamin1306.github.io
+/
+eindwerk 1ste pagina.html
+" class="w3-bar-item w3-button">basistricks en hun ontdekker</a>
         <a href="file:///C:/Users/devuy/OneDrive/Documenten/GitHub/benjamin1306.github.io/eindwerk%20pagina%20stances.html" class="w3-bar-item w3-button">standen</a>
         <a href="file:///C:/Users/devuy/OneDrive/Documenten/GitHub/benjamin1306.github.io/skateparken.html" class="w3-bar-item w3-button">skateparken</a>
 </div>    
