--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
          <a href="https://benjamin1306.github.io/" class="w3-bar-item w3-button">Home</a>
 
          <a href="eindwerk eerste pagina.html" class="w3-bar-item w3-button">tricks en de ontdekker</a>
-        <a href="benjamin1306.github.io/eindwerk pagina stances.html" class="w3-bar-item w3-button">standen</a>
-         <a href="benjamin1306.github.io/skateparken.html" class="w3-bar-item w3-button">skateparken</a>
+        <a href="eindwerk pagina stances.html" class="w3-bar-item w3-button">standen</a>
+         <a href="skateparken.html" class="w3-bar-item w3-button">skateparken</a>
 
           </div>
         </span>
