--- a/eindwerk 1ste pagina.html
+++ b/eindwerk 1ste pagina.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <div class="w3-bar w3-black">
         <a href="https://benjamin1306.github.io/" class="w3-bar-item w3-button">Home</a>
-        <a href="benjamin1306.github.io/eindwerk 1ste pagina.html" class="w3-bar-item w3-button">basistricks en hun ontdekker</a>
-        <a href="benjamin1306.github.io/eindwerk pagina stances.html" class="w3-bar-item w3-button">standen</a>
-        <a href="benjamin1306.github.io/skateparken.html" class="w3-bar-item w3-button">skateparken</a>
+        <a href="eindwerk 1ste pagina.html" class="w3-bar-item w3-button">basistricks en hun ontdekker</a>
+        <a href="eindwerk pagina stances.html" class="w3-bar-item w3-button">standen</a>
+        <a href="skateparken.html" class="w3-bar-item w3-button">skateparken</a>
 </div>    
 <br>
 <br><br>
