--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <div class="w3-bar w3-black">
          <a href="https://benjamin1306.github.io/" class="w3-bar-item w3-button">Home</a>
 
-         <a href="eindwerk eerste pagina.html" class="w3-bar-item w3-button">tricks en de ontdekker</a>
+         <a href="eindwerk 1ste pagina.html" class="w3-bar-item w3-button">tricks en de ontdekker</a>
         <a href="eindwerk pagina stances.html" class="w3-bar-item w3-button">standen</a>
          <a href="skateparken.html" class="w3-bar-item w3-button">skateparken</a>
 
