--- a/skateparken.html
+++ b/skateparken.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <div class="w3-bar w3-black">
- <a href="https://benjamin1306.github.io/" class="w3-bar-item w3-button">Home</a>
+ <a href="index.html" class="w3-bar-item w3-button">Home</a>
  <a href="eindwerk 1ste pagina.html" class="w3-bar-item w3-button">basistricks en hun ontdekker</a>
  <a href="eindwerk pagina stances.html" class="w3-bar-item w3-button">standen</a>
  <a href="skateparken.html" class="w3-bar-item w3-button">skateparken</a>
