Update eindwerk 1ste pagina.html

--- a/eindwerk 1ste pagina.html
+++ b/eindwerk 1ste pagina.html
@@ -58,7 +58,7 @@
 
     <table BORDER> <tr><td><h3> de frontside 180 </h3></tr> </td></table>
     <p>de fronstide 180 is een trick waarbij je met behulp van een <a href="#ollie">ollie</a> een 180 graden draai maakt. <br>
-    het is een trick uitgevonden door Johnny Rodney Mullen hij is een 55 jarige skater uit Amerika. <br>
+    Het is een trick uitgevonden door Johnny Rodney Mullen hij is een 55 jarige skater uit Amerika. <br>
      hier is er ook een variant van de backside 180. </p></main>
 
 
