--- a/skateparken.html
+++ b/skateparken.html
@@ -76,7 +76,7 @@ Het bevindt zich in Gent en heeft geen beperking van het aantal skaters dus rese
 <img src="trax.jpg" alt=""width="450"height="250">
 
 <table BORDER><tr><td> <h3 id="OoDeeKay"> OoDeeKay</h3></tr>  </td></table>
-<p>Oodeekay is een skatepark in oostduinkerke,het is in beton aangelegd wat je <br>
+<p>Oodeekay is een skatepark in Oostduinkerke,het is in beton aangelegd wat je <br>
    soepel laat rijden en tricks laat doen </p>
    <img src="odk.jpg" alt=""width=450 height="300">
 </main>
