--- a/skateparken.html
+++ b/skateparken.html
@@ -47,7 +47,7 @@ Het bevindt zich in Gent en heeft geen beperking van het aantal skaters dus rese
 <br>
 <!---tabel--->
 <table BORDER> <tr><td> <h3 id="Rampaffairz">Rampaffairz</tr> </h3> </td></table>
-<p>Dit skatepark is een indoor skatepark dat zich in wevelgem bevindt,<br>
+<p>Dit skatepark is een indoor skatepark dat zich in Wevelgem bevindt,<br>
  het skatepark heeft aangepaste openingsuren voor skaters,Bmx'en en rollerschaatsen</p>
  <br>
  <br>
@@ -64,14 +64,14 @@ Het bevindt zich in Gent en heeft geen beperking van het aantal skaters dus rese
             <img src="rampaffairz.jpg" alt="" width="450" height="300">
           
             <table BORDER><tr><td> <h3 id="luxaplast"> luxaplast</h3></tr>  </td></table>
-<p>luxaplast is een skatepark in Kortrijk het is outdoor je wel besschut zitn <br>
+<p>Luxaplast is een skatepark in Kortrijk het is outdoor je wel besschut zitn <br>
    door de ring van kortrijk die boven het skatepark loopt. Het skatepark is 600 vierkante meter groot <br>
   en heeft stairq ledgen en twee quarters</p>
   <img src="kortrijk-luxaplast-4.jpg" alt=""width="400" height="250">
      <br>
      <br>
      <table BORDER><tr><td> <h3 id="Trax"> Trax</h3></tr>  </td></table>     
-     <p>trax is een skatepark in Roeselare waar je buiten kan skaten maar aan de andere kant <br>
+     <p>Trax is een skatepark in Roeselare waar je buiten kan skaten maar aan de andere kant <br>
        ook een overdekking zodat skaters tijdens natte dagen binnen kunnen skaten.</p>
 <img src="trax.jpg" alt=""width="450"height="250">
 
