Update eindwerk pagina stances.html

--- a/eindwerk pagina stances.html
+++ b/eindwerk pagina stances.html
@@ -36,14 +36,15 @@ mensen die goofy skaten staan met hun rechtervoet vooraan.</p> <img src="goofyvs
 <br>
 <main>
 <table BORDER> <tr><td> <h3 id="fakie">Fakie</tr> </h3> </td></table>
-<p>Fakie betekent in het skateboarden achteruit rijden. als een skater zegt fakie kickflip of fakie ollie <br>
+<p>Fakie betekent in het skateboarden achteruit rijden. 
+ Als een skater zegt fakie kickflip of fakie ollie <br>
 dan wordt de trick gedaan zoals anders maar dan achteruit.</p>
 <br>
 <br>
 <br>
 <table BORDER> <tr><td> <h3 id="switch"> switch</tr> </h3> </td></table>
 <p>Als je een switch trick wilt doen dan moet je van stand veranderen, dus als je regular rijdt moet je in goofy gaan staan <br>
-en als je in goofy staat verander je naar regular. Het veranderen van stand is moeilijker dan het lijkt <br></p>
+en als je in goofy staat verander je naar regular. Het veranderen van stand is moeilijker dan het lijkt.<br></p>
 <br>
 <br>
 <br>
