--- a/pagina supercar.html
+++ b/pagina supercar.html
@@ -38,9 +38,9 @@ main {
      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
        <div class="w3-bar w3-black">
-        <a href="file:///C:/Users/devuy/OneDrive/Documenten/INFO%2022_23/project%202023/index.html" class="w3-bar-item w3-button">sportscar</a>
-          <a href="file:///C:/Users/devuy/OneDrive/Documenten/INFO%2022_23/project%202023/pagina%20supercar.html" class="w3-bar-item w3-button">supercar</a>
-           <a href="file:///C:/Users/devuy/OneDrive/Documenten/INFO%2022_23/project%202023/muscle%20cars.html" class="w3-bar-item w3-button">american mucsle</a>
+        <a href="benjamin1306.github.io/index.html" class="w3-bar-item w3-button">sportscar</a>
+          <a href="https://benjamin1306.github.io/pagina%20supercar.html" class="w3-bar-item w3-button">supercar</a>
+           <a href="https://benjamin1306.github.io/muscle%20cars.html" class="w3-bar-item w3-button">american mucsle</a>
             <a href="skateparken.html" class="w3-bar-item w3-button">oldtimer</a>
              <a href="skateparken.html" class="w3-bar-item w3-button">everyday cars</a>
              </div>
