--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ main {
        <div class="w3-bar w3-black">
         <a href="benjamin1306.github.io/index.html" class="w3-bar-item w3-button">sportscar</a>
           <a href="benjamin1306.github.io/supercar.html" class="w3-bar-item w3-button">supercar</a>
-           <a href="benjamin1306.github.io/american muscle.html" class="w3-bar-item w3-button">american mucsle</a>
+           <a href="https://benjamin1306.github.io/muscle%20cars.html" class="w3-bar-item w3-button">american mucsle</a>
             <a href="skateparken.html" class="w3-bar-item w3-button">oldtimer</a>
              <a href="skateparken.html" class="w3-bar-item w3-button">everyday cars</a>
              </div>
