--- a/oldtimers.html
+++ b/oldtimers.html
@@ -32,11 +32,11 @@ li{color: white;}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">shado
 <div class="w3-bar w3-black">
-<a href="http://127.0.0.1:5500/index.html" class="w3-bar-item w3-button">sportscar</a>
-<a href="http://127.0.0.1:5500/pagina%20supercar.html" class="w3-bar-item w3-button">supercar</a>
-<a href="http://127.0.0.1:5500/muscle%20cars.html" class="w3-bar-item w3-button">american mucsle</a>
-<a href="http://127.0.0.1:5500/oldtimers.html" class="w3-bar-item w3-button">oldtimer</a>
-<a href="http://127.0.0.1:5500/JDM.html" class="w3-bar-item w3-button">JDM</a>
+<a href="https://benjamin1306.github.io/index.html" class="w3-bar-item w3-button">sportscar</a>
+<a href="https://benjamin1306.github.io/pagina supercar.html" class="w3-bar-item w3-button">supercar</a>
+<a href="https://benjamin1306.github.io/muscle cars.html" class="w3-bar-item w3-button">american mucsle</a>
+<a href="https://benjamin1306.github.io/oldtimers.html" class="w3-bar-item w3-button">oldtimer</a>
+<a href="https://benjamin1306.github.io/JDM.html" class="w3-bar-item w3-button">JDM</a>
 </div>
 
 
