--- a/pagina supercar.html
+++ b/pagina supercar.html
@@ -39,10 +39,10 @@ main {
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <div class="w3-bar w3-black">
 <a href="https://benjamin1306.github.io/index.html" class="w3-bar-item w3-button">sportscar</a>
-<a href="http://127.0.0.1:5500/pagina%20supercar.html" class="w3-bar-item w3-button">supercar</a>
-<a href="http://127.0.0.1:5500/muscle%20cars.html" class="w3-bar-item w3-button">american mucsle</a>
-<a href="http://127.0.0.1:5500/oldtimers.html" class="w3-bar-item w3-button">oldtimer</a>
-<a href="http://127.0.0.1:5500/JDM.html" class="w3-bar-item w3-button">JDM</a>
+<a href="https://benjamin1306.github.io/pagina supercar.html" class="w3-bar-item w3-button">supercar</a>
+<a href="https://benjamin1306.github.io/muscle cars.html" class="w3-bar-item w3-button">american mucsle</a>
+<a href="https://benjamin1306.github.io/oldtimers.html" class="w3-bar-item w3-button">oldtimer</a>
+<a href="https://benjamin1306.github.io/JDM.html" class="w3-bar-item w3-button">JDM</a>
 </div>
 
 <h1>supercars</h1>
