--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ main {
 <a href="https://benjamin1306.github.io/index.html" class="w3-bar-item w3-button">sportscar</a>
 <a href="https://benjamin1306.github.io/pagina supercar.html" class="w3-bar-item w3-button">supercar</a>
 <a href="https://benjamin1306.github.io/muscle cars.html" class="w3-bar-item w3-button">american mucsle</a>
-<a href="https://benjamin1306.github.io/oldtimer.html" class="w3-bar-item w3-button">oldtimer</a>
+<a href="https://benjamin1306.github.io/oldtimers.html" class="w3-bar-item w3-button">oldtimer</a>
 <a href="https://benjamin1306.github.io/JDM.html" class="w3-bar-item w3-button">JDM</a>
 </div>
            
