--- a/JDM.html
+++ b/JDM.html
@@ -52,7 +52,7 @@
 <h1>JDM cars</h1>
 <p>JDM staat voor japanese domestic market. De auto marken die onder deze markt vallen zijn
 Honda, Subaru, Toyota, Mazda, Suzuki, Lexus, Mitsubishi Motors en Nissan.
-Een auto is een jdm auto wanneer het in japan is gemaakt dit soort auto's zien er meestal sportief uit en worden vaak getuned zoals de 
+<br>Een auto is een jdm auto wanneer het in japan is gemaakt dit soort auto's zien er meestal sportief uit en worden vaak getuned zoals de 
 subaru impreza en de Nissan skyline R34</p>
 <p>
 <ul>
