--- a/JDM.html
+++ b/JDM.html
@@ -50,10 +50,10 @@
 
 
 <h1>JDM cars</h1>
-<p>JDM staat voor japanese domestic market. De auto marken die onder deze markt vallen zijn
+<p>JDM staat voor Japanese domestic market. De auto marken die onder deze markt vallen zijn
 Honda, Subaru, Toyota, Mazda, Suzuki, Lexus, Mitsubishi Motors en Nissan.
-<br>Een auto is een jdm auto wanneer het in japan is gemaakt dit soort auto's zien er meestal sportief uit en worden vaak getuned zoals de 
-subaru impreza en de Nissan skyline R34</p>
+<br>Een auto is een JDM auto wanneer het in japan is gemaakt dit soort auto's zien er meestal sportief uit en worden vaak getuned zoals de 
+Subaru Impreza en de Nissan skyline R34</p>
 <p>
 <ul>
 <tr><li>Subaru Impreza <br><img src="afbeeldingen/subaru impreza jdm.png" alt=""></li></tr>
