--- a/muscle cars.html
+++ b/muscle cars.html
@@ -45,16 +45,16 @@
 <main>
 <p> Een muscle car is een auto die zich focust op prestaties. <br>
 De naam komt door de Amerikaanse,Australische en Zuid-Afrikaanse automodellen met een grote cilindercapaciteit. <br>
-de klasieke werden gemaakt in de Vs tussen 1964 en 1973. <br>
+De klasieke werden gemaakt in de Vs tussen 1964 en 1973. <br>
 Dit soort auto's bezit een V8- motor met een grote cilinderinhoud om zijn maximale vermogen te behalen. <br>
-Een van de meeste bekende muscle cars is de dodge charger 1970 waar dominic torreto mee rijdt in de fast en furious films. 
+Een van de meeste bekende muscle cars is de dodge charger 1970 waar Dominic Torreto mee rijdt in de fast en furious films. 
 </p>
 </main>
 <ul>
-<li>dodge challenger</li> 
+<li>Dodge challenger</li> 
 <tr><img src="afbeeldingen/dodge ch.png" alt=""height=200 width="
 370"></tr>
-<li>ford mustang</li>
+<li>Ford mustang</li>
 
 <tr><img src="afbeeldingen/mustang muscle.png" alt=""height=200 width="450"></tr>
 
