--- a/oldtimers.html
+++ b/oldtimers.html
@@ -30,7 +30,7 @@ li{color: white;}
 
   <!---navigatiebar-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">shado
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <div class="w3-bar w3-black">
 <a href="https://benjamin1306.github.io/index.html" class="w3-bar-item w3-button">sportscar</a>
 <a href="https://benjamin1306.github.io/pagina supercar.html" class="w3-bar-item w3-button">supercar</a>
