--- a/JDM.html
+++ b/JDM.html
@@ -47,7 +47,7 @@
 
 
 
-
+<main>
 
 <h1>JDM cars</h1>
 <p>JDM staat voor Japanese domestic market. De auto marken die onder deze markt vallen zijn
@@ -55,6 +55,7 @@ Honda, Subaru, Toyota, Mazda, Suzuki, Lexus, Mitsubishi Motors en Nissan.
 <br>Een auto is een JDM auto wanneer het in japan is gemaakt dit soort auto's zien er meestal sportief uit en worden vaak getuned zoals de 
 Subaru Impreza en de Nissan skyline R34</p>
 <p>
+ </main>
 <ul>
 <tr><li>Subaru Impreza <br><img src="afbeeldingen/subaru impreza jdm.png" alt=""></li></tr>
 <tr><li>Nissan Skyline r34 <br> <img src="afbeeldingen/nissan skyline r34.png" alt=""height="250"width="380"> </li></tr>
