--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@ main {
 			}
 		}
 </style>
+	<body>
+<head>
+    <title>JavaScript-extract zonder extern bestand</title>
+    <script>
+        // Voeg hier je JavaScript-code toe
+        window.onload = function() {
+            // Code die wordt uitgevoerd wanneer de pagina is geladen
+            var heading = document.getElementById('myHeading');
+            heading.textContent = 'Hallo, wereld!';
+        };
+    </script>
+</head>
+<body>
+    <h1 id="myHeading">Dit wordt overschreven door JavaScript</h1>
+</body>
+
+
 <body>  
 <!---navigatiebar-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
